cdk-plus/dist/DinChart.k8s.yaml
apiVersion: v1
kind: Pod
metadata:
  name: ""
spec:
  containers:
    - env: []
      image: paulbouwer/hello-kubernetes:1.8
      name: main
      ports: []
      volumeMounts: []
  volumes: []
---
apiVersion: v1
kind: Service
metadata:
  name: HelloService
spec:
  externalIPs: []
  ports:
    - port: 80
      targetPort: 8080
  selector: {}
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dinchart-hellodeployment-pod-f0d6a243
spec:
  replicas: 2
  selector:
    matchLabels:
      cdk8s.deployment: DinChartHelloDeploymentCDBCAC80
  template:
    metadata:
      labels:
        cdk8s.deployment: DinChartHelloDeploymentCDBCAC80
    spec:
      containers:
        - env: []
          image: paulbouwer/hello-kubernetes:1.8
          name: main
          ports:
            - containerPort: 80
          volumeMounts: []
      volumes: []
---
apiVersion: v1
kind: Service
metadata:
  name: dinchart-hellodeployment-service-pod-83e41e87
spec:
  externalIPs: []
  ports:
    - port: 80
      targetPort: 80
  selector:
    cdk8s.deployment: DinChartHelloDeploymentCDBCAC80
  type: LoadBalancer
