cdk-plus/dist/cdk8splus.k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cdk8s-plus-deployment-pod-74c56686
spec:
  replicas: 3
  selector:
    matchLabels:
      cdk8s.deployment: cdk8splusdeployment6E48965B
  template:
    metadata:
      labels:
        app: guestbook
        cdk8s.deployment: cdk8splusdeployment6E48965B
        tier: frontend
    spec:
      containers:
        - env: []
          image: paulbouwer/hello-kubernetes:1.8
          name: hello-kubernetes
          ports:
            - containerPort: 8080
          volumeMounts: []
      volumes: []
---
apiVersion: v1
kind: Service
metadata:
  name: cdk8s-plus-deployment-service-pod-4a702166
spec:
  externalIPs: []
  ports:
    - port: 80
      targetPort: 8080
  selector:
    cdk8s.deployment: cdk8splusdeployment6E48965B
  type: LoadBalancer
