cdk-plus/dist/cdk8spluschartproductpage0D0A3D92.k8s.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: productpage
    service: productpage
  name: productpage
spec:
  externalIPs: []
  ports:
    - port: 9080
  selector:
    app: productpage
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: productpage
    version: v1
  name: productpage-v1
spec:
  replicas: 1
  selector:
    matchLabels:
      cdk8s.deployment: cdk8spluschartproductpageproductpagev11EFE0429
  template:
    metadata:
      labels:
        app: productpage
        cdk8s.deployment: cdk8spluschartproductpageproductpagev11EFE0429
        version: v1
    spec:
      containers:
        - env: []
          image: docker.io/istio/examples-bookinfo-productpage-v1:1.15.1
          name: productpage
          ports:
            - containerPort: 9080
          volumeMounts:
            - mountPath: /tmp
              name: tmp
      serviceAccountName: bookinfo-productpage
      volumes:
        - emptyDir: {}
          name: tmp
