cdk-plus/dist/cdk8spluschartratingsD16D4B83.k8s.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: ratings
    service: ratings
  name: ratings
spec:
  externalIPs: []
  ports:
    - port: 9080
  selector:
    app: ratings
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: ratings
    version: v1
  name: ratings-v1
spec:
  replicas: 1
  selector:
    matchLabels:
      cdk8s.deployment: cdk8spluschartratingsratingsv1D30BC3B2
  template:
    metadata:
      labels:
        app: ratings
        cdk8s.deployment: cdk8spluschartratingsratingsv1D30BC3B2
        version: v1
    spec:
      containers:
        - env: []
          image: docker.io/istio/examples-bookinfo-ratings-v1:1.15.1
          name: ratings
          ports:
            - containerPort: 9080
          volumeMounts: []
      serviceAccountName: bookinfo-ratings
      volumes: []
