cdk-plus/dist/scfinal.k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: front
  name: front
spec:
  replicas: 1
  selector:
    matchLabels:
      cdk8s.deployment: scfinalfrontE4A03597
  template:
    metadata:
      labels:
        cdk8s.deployment: scfinalfrontE4A03597
    spec:
      containers:
        - env: []
          image: chanwit/front
          name: front
          ports:
            - containerPort: 8080
          volumeMounts: []
      volumes: []
---
apiVersion: v1
kind: Service
metadata:
  name: scfinal-front-service-pod-19ab6a61
spec:
  externalIPs: []
  ports:
    - port: 9090
      targetPort: 8080
  selector:
    cdk8s.deployment: scfinalfrontE4A03597
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: source
  name: source
spec:
  replicas: 1
  selector:
    matchLabels:
      cdk8s.deployment: scfinalsourceE142463D
  template:
    metadata:
      labels:
        cdk8s.deployment: scfinalsourceE142463D
    spec:
      containers:
        - env: []
          image: chanwit/source
          name: source
          ports:
            - containerPort: 8080
          volumeMounts: []
      volumes: []
---
apiVersion: v1
kind: Service
metadata:
  name: scfinal-source-service-pod-b8bfb278
spec:
  externalIPs: []
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    cdk8s.deployment: scfinalsourceE142463D
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: adder
  name: adder
spec:
  replicas: 1
  selector:
    matchLabels:
      cdk8s.deployment: scfinaladder096BBEFC
  template:
    metadata:
      labels:
        cdk8s.deployment: scfinaladder096BBEFC
    spec:
      containers:
        - env: []
          image: chanwit/adder
          name: adder
          ports:
            - containerPort: 8080
          volumeMounts: []
      volumes: []
---
apiVersion: v1
kind: Service
metadata:
  name: scfinal-adder-service-pod-3b32b116
spec:
  externalIPs: []
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    cdk8s.deployment: scfinaladder096BBEFC
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: suber
  name: suber
spec:
  replicas: 1
  selector:
    matchLabels:
      cdk8s.deployment: scfinalsuber994C1367
  template:
    metadata:
      labels:
        cdk8s.deployment: scfinalsuber994C1367
    spec:
      containers:
        - env: []
          image: chanwit/suber
          name: suber
          ports:
            - containerPort: 8080
          volumeMounts: []
      volumes: []
---
apiVersion: v1
kind: Service
metadata:
  name: scfinal-suber-service-pod-f1d83e77
spec:
  externalIPs: []
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    cdk8s.deployment: scfinalsuber994C1367
  type: ClusterIP
