cdk-plus/dist/hellok8s.k8s.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: hello-k8s-istio-gateway-c6d6401d
spec:
  selector:
    app: my-gateway-controller
  servers:
    - hosts:
        - ext-host.example.com
      port:
        name: https
        number: 443
        protocol: HTTPS
      tls:
        mode: SIMPLE
        privateKey: /tmp/tls.key
        serverCertificate: /tmp/tls.crt
