cdk-plus/dist/cdk8spluschartbookinfogateway8865408D.k8s.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: cdk8splus-chart-bookinfo-gateway-cd60aff0
spec:
  selector:
    istio: ingressgateway
  servers:
    - hosts:
        - "*"
      port:
        name: http
        number: 80
        protocol: HTTP
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: cdk8splus-chart-bookinfo-gateway-bookinfo-8cd6fbfd
spec:
  gateways:
    - bookinfo-gateway
  hosts:
    - "*"
  http:
    - match:
        - uri:
            exact: /productpage
        - uri:
            prefix: /static
        - uri:
            exact: /login
        - uri:
            exact: /logout
        - uri:
            prefix: /api/v1/products
      route:
        - destination:
            host: productpage
            port:
              number: 9080
