cdk-plus/dist/cdk8spluschartdestinationrule1A1A3D93.k8s.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: cdk8splus-chart-destination-rule-productpage-0c5dd4cd
spec:
  host: productpage
  subsets:
    - labels:
        version: v1
      name: v1
  trafficPolicy: {}
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: cdk8splus-chart-destination-rule-reviews-15539156
spec:
  host: reviews
  subsets:
    - labels:
        version: v1
      name: v1
    - labels:
        version: v2
      name: v2
    - labels:
        version: v3
      name: v3
  trafficPolicy: {}
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: cdk8splus-chart-destination-rule-ratings-5ac57045
spec:
  host: ratings
  subsets:
    - labels:
        version: v1
      name: v1
    - labels:
        version: v2
      name: v2
    - labels:
        version: v2-mysql
      name: v2-mysql
    - labels:
        version: v2-mysql-vm
      name: v2-mysql-vm
  trafficPolicy: {}
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: cdk8splus-chart-destination-rule-details-c3afb86e
spec:
  host: details
  subsets:
    - labels:
        version: v1
      name: v1
    - labels:
        version: v2
      name: v2
  trafficPolicy: {}
